--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
 		 "gh-pages": "^1.2.0",
        	"parcel-bundler": "^1.9.7"
 	},
-	"homepage": "https://adventurepizza.github.io/Matter-hen/",
+	"homepage": "https://metaverses.fyi/",
 	"proxy": "https://matter-backend.herokuapp.com/"
 
 }
